clean up a bit, initial generation of niem 5 models